--- a/src/main/webapp/i18n/pt-br/device.json
+++ b/src/main/webapp/i18n/pt-br/device.json
@@ -21,7 +21,8 @@
             "status": "Status",
             "lastUpdate": "Last Update",
             "traccarId": "Traccar Id",
-            "company": "Company"
+            "company": "Company",
+            "importFromTraccar": "Importar Devices do Traccar"
         }
     }
 }
