--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -11,6 +11,7 @@
                 "device": "Rastreador",
                 "person": "Pessoa",
                 "person": "Person",
+                "message": "Message",
                 "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
             },
             "account": {
