--- a/src/main/webapp/i18n/pt-br/message.json
+++ b/src/main/webapp/i18n/pt-br/message.json
@@ -18,7 +18,7 @@
             },
             "messageTime": "Message Time",
             "macroNumber": "Macro Number",
-            "macroText": "Macro Text",
+            "text": "Macro Text",
             "device": "Device"
         }
     }
