--- a/src/main/webapp/i18n/en/message.json
+++ b/src/main/webapp/i18n/en/message.json
@@ -18,8 +18,19 @@
             },
             "messageTime": "Message Time",
             "macroNumber": "Macro Number",
-            "macroText": "Macro Text",
-            "device": "Device"
+            "text": "Macro Text",
+            "device": "Device",
+            "filter": {
+                "title": "Filter per date",
+                "from": "from",
+                "to": "to",
+                "button": {
+                    "weeks": "Weeks",
+                    "today": "today",
+                    "clear": "clear",
+                    "close": "close"
+                }
+            }
         }
     }
 }
